<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Namaz Vakti App</string>
    <string name="imsak">İmsak</string>
    <string name="sabah">Sabah</string>
    <string name="gunes">Güneş</string>
    <string name="ogle">Öğle</string>
    <string name="ikindi">İkindi</string>
    <string name="aksam">Akşam</string>
    <string name="yatsi">Yatsı</string>
    <string name="last_update">Son güncelleme: %1$s</string>
    
    <!-- Bildirim metinleri -->
    <string name="notification_channel_name">Namaz Vakti Bildirimleri</string>
    <string name="notification_channel_desc">Namaz vakitlerinde bildirim gösterir</string>
    <string name="prayer_time_notification_title">%1$s Vakti</string>
    <string name="prayer_time_notification_text">%1$s için %2$s vakti geldi.</string>
</resources>
