<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="2dp">
        
        <TextView
            android:id="@+id/location_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginLeft="2dp"
            android:singleLine="true"
            android:ellipsize="end"
            android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            
        <TextView
            android:id="@+id/countdown_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginRight="2dp"
            android:singleLine="true"
            android:text=""
            android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/imsak_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imsak"
                android:textSize="11sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/imsak_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/imsak"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/imsak_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            <TextView
                android:id="@+id/imsak_time_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:singleLine="true"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/gunes_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gunes"
                android:textSize="11sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/gunes_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gunes"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/gunes_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            <TextView
                android:id="@+id/gunes_time_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:singleLine="true"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/ogle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ogle"
                android:textSize="11sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/ogle_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ogle"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/ogle_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            <TextView
                android:id="@+id/ogle_time_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:singleLine="true"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/ikindi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ikindi"
                android:textSize="11sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/ikindi_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ikindi"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/ikindi_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            <TextView
                android:id="@+id/ikindi_time_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:singleLine="true"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/aksam_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aksam"
                android:textSize="11sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/aksam_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aksam"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/aksam_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            <TextView
                android:id="@+id/aksam_time_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:singleLine="true"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/yatsi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yatsi"
                android:textSize="11sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/yatsi_text_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yatsi"
                android:textSize="12sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification.Title"/>
            <TextView
                android:id="@+id/yatsi_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
            <TextView
                android:id="@+id/yatsi_time_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:singleLine="true"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAppearance="@android:style/TextAppearance.Material.Notification"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>